# nascent_takehome

./: .gitignore  2TakehomeInstructions.md  README.md  codestyle.md  main.py  pyproject.toml
4output/: data_cleaned_conservative.csv  data_cleaned_strict.csv  data_quality_flags.csv  data_quality_summary.json  data_removal_log.csv  data_repair_log_conservative.csv  data_repair_summary_conservative.json  outlier_analysis_results.json  statistical_analysis_results.json  validation_results.json
5scripts/: 1_quality.py  2_repair.py  3_validation.py  4_statistics.py  temp_outline.md
6utilities/: ascii.py  generate_readme.ps1
